# generative-ui

./: LICENSE  README.md  pyproject.toml
demos/goose/src/: main.py
demos/goose/src/internals/: llm.py  mem.py
demos/goose/src/static/scripts/: chatControls.js  demoButton.js  homeButton.js  loadGUID.js  popups.js  resetButton.js  shepherdTour.js  tourButton.js  updateSettings.js
demos/goose/src/static/styles/: chat.css  index.css  shared.css
demos/goose/src/templates/: 404.html  chat.html  index.html
demos/skye/src/: main.py
demos/skye/src/internals/: llm.py
demos/skye/src/static/scripts/: getGUID.js  loadingWrapperTriggers.js  menuTriggers.js  popups.js  submitMainForm.js
demos/skye/src/static/styles/: chat.css  index.css  shared.css
demos/skye/src/templates/: 404.html  chat.html  index.html
