[tool.poetry]
name = "generative-ui-demo"
version = "0.1.0"
description = "Help your LLM apps escape the chat box!"
authors = ["zacharysf <zachary.smith@schemeflow.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.34.0"
instructor = "^1.3.3"
uvicorn = "^0.30.1"
fastapi = "^0.111.0"
setuptools = "^70.0.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
ruff = "^0.4.9"
ollama = "^0.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
